--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,6 @@
 {
-  "framework": "vite",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install --legacy-peer-deps",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "public": true,
+  "github": {
+    "silent": true
+  }
 }
-
-
-
-
