--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "public": true,
-  "github": {
-    "silent": true
-  }
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
