fix: обновлен vercel.json с правильной командой установки и добавлен package-lock.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,18 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "installCommand": "npm install --legacy-peer-deps",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.mjs": {
+      "runtime": "nodejs20.x",
+      "includeFiles": "api/**"
+    }
+  }
 }
