feat: интеграция бонусной системы и прав доступа
- зменен процент бонусов с 50% на 10% (база бонусов)
- граничен доступ к бонусам: только CEO и deputy_director
- обавлена проверка прав в Bonuses.tsx и Analytics.tsx
- справлена логика проверки разрешений в AppSidebar
- лучшена мобильная версия (touch-friendly, burger menu)
- обавлены демо-пользователи для тестирования полного цикла проекта
- справлены NaN ошибки в Dashboard, Bonuses, Analytics
- обавлены Playwright тесты для проверки доступа к бонусам
- бновлена документация (PROJECT_CYCLE_GUIDE.md)

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   ],
   "functions": {
     "api/**/*.mjs": {
-      "runtime": "nodejs20.x",
+      "runtime": "nodejs20.x@latest",
       "includeFiles": "api/**"
     }
   }
