--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "nodemailer": "^6.9.15",
+    "pdfmake": "^0.2.20",
     "react": "^18.3.1",
     "react-day-picker": "^9.4.4",
     "react-dom": "^18.3.1",
